# src/main/java/ru/maltsev/primemarketbackend/account/api/dto/WalletWorkSummaryResponse.java
@@ -1,0 +1,10 @@
+package ru.maltsev.primemarketbackend.account.api.dto;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+import java.util.List;
+
+public record WalletWorkSummaryResponse(
+    List<WalletWorkItemResponse> reserves,
+    @JsonProperty("pending_deposits") List<WalletWorkItemResponse> pendingDeposits
+) {
+}
